# nexus-vxlan-evpn

./: .gitignore  README.md  TROUBLESHOOTING_LOG.md  pyproject.toml
.github/workflows/: ci.yml
configs/: backbone.txt  s1-leaf2.txt  s1-leaf3.txt  s1-spine1.txt  s1-spine2.txt  s2-leaf1.txt  s2-spine1.txt
configs_new/: s1-edge1.txt  s1-leaf1.txt
infrastructure_as_code/: api_client.py  desired_state.yaml  desired_state_full.yaml  nexus_iac_full.py  resources.py  state_manager.py
scripts/: extract_configs.py  extract_configs_ssh.py  misc_scripts.txt  verify_fabric.py
